# Formula1Epoch

./: .gitattributes  .gitignore  README.md  SteerNet.py  SteerNetL1.py  SteerNetL12.py  SteerNetL2.csv  SteerNetL2.py  SteerNetL2Conv5163264.py  SteerNetL2Conv564.py  SteerNetL2Conv6.csv  SteerNetL2Conv6.h5  SteerNetL2Conv6.py  SteerNetL2MoreConv.py  SteerNetL2MoreConv64.py  SteerNetL2SGD.py  SteerNetMoreConv.py  SteerNetMoreConv3264.py  SteerNetMoreConv64.py  SteerNetSGD.py  SteerNetSimple.csv  avg.py  concatNet.h5  concatNet.py  format.py  format.sh  genFiles.sh  helperFunctions.py  image.npy  imageT1.npy  imageToPixels.py  imout.npy  imoutT1.npy  improvedInference.py  isaacPATH.py  joyVisualization.py  joy_teleop.py  jstk.txt  lidar.txt  lidarT1.npy  (+9 more)
datacollection/: .collectdata.swp  collect.txt  collectdata
datacollection/cameratest/: count.txt  main.c  test  timestamp.txt
datacollection/data/: joydata.txt
datacollection/data/lidar/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  collect_lidar.py  infer_lidar.py  lidar.npy  lidar_data_retrieval  lidarinfer.txt  main.cpp
datacollection/format/: helperFunctions.py
networks/: inference.py  runPeopleNetOnce.sh
networks/LiNet/: convtest.h5  helperFunctions.py  inference.py  jstk.npy  jstkT1.npy  liNet.py  liNet0.py  liNet2.py  liNetConv.py  lidar.h5  lidar.npy  linet1.h5  sickT1.h5
networks/SteerNet/: CustomThread.py  SteerNet.py  avg.py  customThread.py  drive.py  helperFunctions.py  inference.py  joy_teleop.py  joys.txt  threadTest.py
racecar-ws/devel/: .catkin  .rosinstall  setup.sh
(+64 files in other folders)
